--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "artist": {
-        "name": "BxKats",
+        "name": "BxKat",
         "address": "0xbccc57c75b5ad32c9f1655480a08d4fc0fd0f925",
         "show": true
     },
