--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,7 @@
           "image": "tinybox",
           "contract": "ItemMemeMaruBox",
           "category": "memes",
-          "displayName": "Too Tiny Box"
+          "displayName": "Maru's Tiny Box"
       },{
           "image": "strawberryhat",
           "contract": "ItemMemeStrawberryHat",
