--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,11 @@
           "contract": "ItemMemeCucumber",
           "category": "memes",
           "displayName": "Cucumbers Behind Cats"
+      },,{
+          "image": "ceilingcat",
+          "contract": "ItemMemeCeilingCat",
+          "category": "memes",
+          "displayName": "Ceiling Cat"
       },{
           "image": "chemistrycat",
           "contract": "ItemMemeScience",
