--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
           "image": "butterflytoy",
           "contract": "",
           "category": "accessories",
-          "displayName": "Spinning Butterfly Toy"
+          "displayName": "Butterfly Toy"
       },{
           "image": "eyepatch",
           "contract": "",
